@@ -36,7 +36,6 @@ import static org.mockito.Mockito.when;
  * Characterization tests for OrderService read-path DTO construction.
  * <p>
  * Pins the current output of:
- * - getOrderById(UUID)
  * - getOrderDetail(UUID)
  * - getAllOrders(PageRequest, FilterRequest)
  * - getMyOrders(UUID)
@@ -212,129 +211,6 @@ class OrderServiceReadPathCharacterizationTest
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // getOrderById — pins OrderResponseDto construction via OrderMapper
-    // ══════════════════════════════════════════════════════════════════════════
-
-    @Nested
-    @DisplayName("getOrderById")
-    class GetOrderByIdTests
-    {
-
-        @Test
-        @DisplayName("fully populated order — pins all OrderResponseDto fields")
-        void fullyPopulatedOrder_pinsAllFields()
-        {
-            OrderEntity order = buildFullyPopulatedOrder();
-            stubOrderRepositoryFindById(order);
-
-            OrderResponseDto dto = orderService.getOrderById(order.getId());
-
-            assertNotNull(dto);
-            assertEquals("11111111-1111-1111-1111-111111111111", dto.getId());
-            assertEquals("22222222-2222-2222-2222-222222222222", dto.getSessionId());
-            assertEquals("PAID", dto.getStatus());
-            assertEquals(order.getCreatedAt().format(java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME), dto.getCreateDate());
-            assertEquals(new BigDecimal("1250.00"), dto.getTotalAmount());
-            assertEquals(2, dto.getItemCount());
-
-            // Customer
-            assertNotNull(dto.getCustomer());
-            assertEquals("customer@example.com", dto.getCustomer().getEmail());
-
-            // Items
-            assertNotNull(dto.getItems());
-            assertEquals(2, dto.getItems().size());
-
-            // First item
-            var item1Dto = dto.getItems().get(0);
-            assertEquals("88888888-8888-8888-8888-888888888888", item1Dto.getId());
-            assertEquals(new BigDecimal("250.00"), item1Dto.getUnitPrice());
-            assertEquals(3, item1Dto.getQuantity());
-            assertNotNull(item1Dto.getVariant());
-            assertEquals(UUID.fromString("77777777-7777-7777-7777-777777777777"), item1Dto.getVariant().getId());
-            assertEquals(50, item1Dto.getVariant().getStockQuantity());
-            assertEquals("{\"color\":\"red\",\"size\":\"L\"}", item1Dto.getVariant().getAttributesJson());
-            assertEquals(new BigDecimal("0.75"), item1Dto.getVariant().getWeightKg());
-            assertNotNull(item1Dto.getVariant().getProduct());
-            assertEquals("Premium Widget", item1Dto.getVariant().getProduct().getName());
-
-            // Images on first item's variant
-            assertNotNull(item1Dto.getVariant().getImages());
-            assertEquals(2, item1Dto.getVariant().getImages().size());
-            assertEquals("55555555-5555-5555-5555-555555555555", item1Dto.getVariant().getImages().get(0).getId());
-            assertEquals("https://cdn.example.com/widget1.jpg", item1Dto.getVariant().getImages().get(0).getImageUrl());
-            assertEquals(1, item1Dto.getVariant().getImages().get(0).getSortOrder());
-            assertTrue(item1Dto.getVariant().getImages().get(0).isFeatured());
-            assertEquals("66666666-6666-6666-6666-666666666666", item1Dto.getVariant().getImages().get(1).getId());
-            assertEquals("https://cdn.example.com/widget2.jpg", item1Dto.getVariant().getImages().get(1).getImageUrl());
-            assertEquals(2, item1Dto.getVariant().getImages().get(1).getSortOrder());
-            assertFalse(item1Dto.getVariant().getImages().get(1).isFeatured());
-
-            // Second item — no images
-            var item2Dto = dto.getItems().get(1);
-            assertEquals("bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb", item2Dto.getId());
-            assertEquals(new BigDecimal("125.00"), item2Dto.getUnitPrice());
-            assertEquals(2, item2Dto.getQuantity());
-            assertNotNull(item2Dto.getVariant());
-            assertEquals(UUID.fromString("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa"), item2Dto.getVariant().getId());
-            assertEquals(100, item2Dto.getVariant().getStockQuantity());
-            assertNull(item2Dto.getVariant().getAttributesJson());
-            assertEquals(new BigDecimal("1.20"), item2Dto.getVariant().getWeightKg());
-            assertNotNull(item2Dto.getVariant().getProduct());
-            assertEquals("Basic Gadget", item2Dto.getVariant().getProduct().getName());
-            assertNotNull(item2Dto.getVariant().getImages());
-            assertTrue(item2Dto.getVariant().getImages().isEmpty());
-        }
-
-        @Test
-        @DisplayName("null orderId — returns null")
-        void nullOrderId_returnsNull()
-        {
-            OrderResponseDto dto = orderService.getOrderById(null);
-            assertNull(dto);
-        }
-
-        @Test
-        @DisplayName("minimal order (no customer, no items) — pins null handling")
-        void minimalOrder_pinsNullHandling()
-        {
-            OrderEntity order = buildMinimalOrder();
-            stubOrderRepositoryFindById(order);
-
-            OrderResponseDto dto = orderService.getOrderById(order.getId());
-
-            assertNotNull(dto);
-            assertEquals("cccccccc-cccc-cccc-cccc-cccccccccccc", dto.getId());
-            assertEquals("dddddddd-dddd-dddd-dddd-dddddddddddd", dto.getSessionId());
-            assertEquals("CREATED", dto.getStatus());
-            assertEquals(order.getCreatedAt().format(java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME), dto.getCreateDate());
-            assertEquals(new BigDecimal("0.00"), dto.getTotalAmount());
-            assertNull(dto.getCustomer());
-            assertNotNull(dto.getItems());
-            assertTrue(dto.getItems().isEmpty());
-            assertEquals(0, dto.getItemCount());
-        }
-
-        @Test
-        @DisplayName("order with null variant item — pins null variant handling")
-        void orderWithNullVariant_pinsNullVariantHandling()
-        {
-            OrderEntity order = buildOrderWithNullVariant();
-            stubOrderRepositoryFindById(order);
-
-            OrderResponseDto dto = orderService.getOrderById(order.getId());
-
-            assertNotNull(dto);
-            assertEquals(1, dto.getItems().size());
-            var itemDto = dto.getItems().get(0);
-            assertEquals("12345678-1234-1234-1234-123456789abc", itemDto.getId());
-            assertEquals(new BigDecimal("50.00"), itemDto.getUnitPrice());
-            assertEquals(1, itemDto.getQuantity());
-            assertNull(itemDto.getVariant());
-        }
-    }
-
-    // ══════════════════════════════════════════════════════════════════════════
     // getOrderDetail — pins OrderDetailRespDto (inline mapping in service)
     // ══════════════════════════════════════════════════════════════════════════
 
@@ -345,7 +221,6 @@ class OrderServiceReadPathCharacterizationTest
 
         @Test
         @DisplayName("fully populated order — pins all detail fields")
-        @SuppressWarnings("unchecked")
         void fullyPopulatedOrder_pinsAllDetailFields()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -379,7 +254,7 @@ class OrderServiceReadPathCharacterizationTest
             assertEquals(2, detail.getItems().size());
 
             // First item detail
-            OrderItemDetailDto itemDetail1 = detail.getItems().get(0);
+            OrderItemDetailDto itemDetail1 = detail.getItems().getFirst();
             assertEquals("88888888-8888-8888-8888-888888888888", itemDetail1.getId());
             assertEquals(new BigDecimal("250.00"), itemDetail1.getUnitPrice());
             assertEquals(3, itemDetail1.getQuantity());
@@ -394,10 +269,10 @@ class OrderServiceReadPathCharacterizationTest
             // Images on first item
             assertNotNull(itemDetail1.getVariant().getImages());
             assertEquals(2, itemDetail1.getVariant().getImages().size());
-            assertEquals("55555555-5555-5555-5555-555555555555", itemDetail1.getVariant().getImages().get(0).getId());
-            assertEquals("https://cdn.example.com/widget1.jpg", itemDetail1.getVariant().getImages().get(0).getImageUrl());
-            assertEquals(1, itemDetail1.getVariant().getImages().get(0).getSortOrder());
-            assertTrue(itemDetail1.getVariant().getImages().get(0).isFeatured());
+            assertEquals("55555555-5555-5555-5555-555555555555", itemDetail1.getVariant().getImages().getFirst().getId());
+            assertEquals("https://cdn.example.com/widget1.jpg", itemDetail1.getVariant().getImages().getFirst().getImageUrl());
+            assertEquals(1, itemDetail1.getVariant().getImages().getFirst().getSortOrder());
+            assertTrue(itemDetail1.getVariant().getImages().getFirst().isFeatured());
             assertEquals("66666666-6666-6666-6666-666666666666", itemDetail1.getVariant().getImages().get(1).getId());
             assertEquals("https://cdn.example.com/widget2.jpg", itemDetail1.getVariant().getImages().get(1).getImageUrl());
             assertEquals(2, itemDetail1.getVariant().getImages().get(1).getSortOrder());
@@ -418,7 +293,7 @@ class OrderServiceReadPathCharacterizationTest
             assertNotNull(detail.getStatusHistory());
             assertEquals(2, detail.getStatusHistory().size());
 
-            var hist1 = detail.getStatusHistory().get(0);
+            var hist1 = detail.getStatusHistory().getFirst();
             assertEquals(UUID.fromString("aaa11111-1111-1111-1111-111111111111"), hist1.getId());
             assertEquals(OrderStatusEn.PAID, hist1.getStatus());
             assertEquals("Payment confirmed", hist1.getComment());
@@ -441,7 +316,6 @@ class OrderServiceReadPathCharacterizationTest
 
         @Test
         @DisplayName("minimal order (null customer, no items, no history) — pins null handling")
-        @SuppressWarnings("unchecked")
         void minimalOrder_pinsNullHandling()
         {
             OrderEntity order = buildMinimalOrder();
@@ -467,7 +341,6 @@ class OrderServiceReadPathCharacterizationTest
 
         @Test
         @DisplayName("order with null variant item — pins variant null handling in detail")
-        @SuppressWarnings("unchecked")
         void orderWithNullVariant_pinsNullVariantInDetail()
         {
             OrderEntity order = buildOrderWithNullVariant();
@@ -478,7 +351,7 @@ class OrderServiceReadPathCharacterizationTest
 
             assertNotNull(detail);
             assertEquals(1, detail.getItems().size());
-            OrderItemDetailDto itemDetail = detail.getItems().get(0);
+            OrderItemDetailDto itemDetail = detail.getItems().getFirst();
             assertEquals("12345678-1234-1234-1234-123456789abc", itemDetail.getId());
             assertEquals(new BigDecimal("50.00"), itemDetail.getUnitPrice());
             assertEquals(1, itemDetail.getQuantity());
@@ -513,17 +386,17 @@ class OrderServiceReadPathCharacterizationTest
             assertEquals(2, result.size());
 
             // First order
-            assertEquals("11111111-1111-1111-1111-111111111111", result.get(0).getId());
-            assertEquals("PAID", result.get(0).getStatus());
-            assertEquals(new BigDecimal("1250.00"), result.get(0).getTotalAmount());
-            assertEquals(2, result.get(0).getItemCount());
-            assertNotNull(result.get(0).getCustomer());
-            assertEquals("customer@example.com", result.get(0).getCustomer().getEmail());
+            assertEquals("11111111-1111-1111-1111-111111111111", result.getFirst().getId());
+            assertEquals("PAID", result.getFirst().getStatus());
+            assertEquals(new BigDecimal("1250.00"), result.getFirst().getTotalAmount());
+            assertEquals(2, result.getFirst().getItemCount());
+            assertNotNull(result.getFirst().getCustomer());
+            assertEquals("customer@example.com", result.getFirst().getCustomer().getEmail());
 
             // Second order — minimal
-            assertEquals("cccccccc-cccc-cccc-cccc-cccccccccccc", result.get(1).getId());
-            assertEquals("CREATED", result.get(1).getStatus());
-            assertEquals(new BigDecimal("0.00"), result.get(1).getTotalAmount());
+            assertEquals("cccccccc-cccc-cccc-cccc-cccccccccccc", result.getLast().getId());
+            assertEquals("CREATED", result.getLast().getStatus());
+            assertEquals(new BigDecimal("0.00"), result.getLast().getTotalAmount());
             assertEquals(0, result.get(1).getItemCount());
             assertNull(result.get(1).getCustomer());
         }
@@ -552,7 +425,6 @@ class OrderServiceReadPathCharacterizationTest
 
         @Test
         @DisplayName("fully populated order — pins summary DTO fields")
-        @SuppressWarnings("unchecked")
         void fullyPopulatedOrder_pinsSummaryFields()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -563,7 +435,7 @@ class OrderServiceReadPathCharacterizationTest
 
             assertNotNull(result);
             assertEquals(1, result.size());
-            OrderSummaryDto dto = result.get(0);
+            OrderSummaryDto dto = result.getFirst();
             assertEquals("11111111-1111-1111-1111-111111111111", dto.getId());
             assertEquals("2026-07-15T10:30:00", dto.getOrderDate());
             assertEquals("PAID", dto.getStatus());
@@ -573,7 +445,6 @@ class OrderServiceReadPathCharacterizationTest
 
         @Test
         @DisplayName("order with null status — maps status as null")
-        @SuppressWarnings("unchecked")
         void orderWithNullStatus_mapsStatusAsNull()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -583,12 +454,11 @@ class OrderServiceReadPathCharacterizationTest
             List<OrderSummaryDto> result = orderService.getMyOrders(order.getCustomerEntity().getId());
 
             assertEquals(1, result.size());
-            assertNull(result.get(0).getStatus());
+            assertNull(result.getFirst().getStatus());
         }
 
         @Test
         @DisplayName("order with null totalAmount — maps to 0.0")
-        @SuppressWarnings("unchecked")
         void orderWithNullTotalAmount_mapsToZero()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -598,12 +468,11 @@ class OrderServiceReadPathCharacterizationTest
             List<OrderSummaryDto> result = orderService.getMyOrders(order.getCustomerEntity().getId());
 
             assertEquals(1, result.size());
-            assertEquals(0.0, result.get(0).getTotalAmount(), 0.001);
+            assertEquals(0.0, result.getFirst().getTotalAmount(), 0.001);
         }
 
         @Test
         @DisplayName("order with null createdAt — maps orderDate as null")
-        @SuppressWarnings("unchecked")
         void orderWithNullCreatedAt_mapsOrderDateAsNull()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -613,12 +482,11 @@ class OrderServiceReadPathCharacterizationTest
             List<OrderSummaryDto> result = orderService.getMyOrders(order.getCustomerEntity().getId());
 
             assertEquals(1, result.size());
-            assertNull(result.get(0).getOrderDate());
+            assertNull(result.getFirst().getOrderDate());
         }
 
         @Test
         @DisplayName("order with null items — maps itemCount as 0")
-        @SuppressWarnings("unchecked")
         void orderWithNullItems_mapsItemCountAsZero()
         {
             OrderEntity order = buildFullyPopulatedOrder();
@@ -628,12 +496,11 @@ class OrderServiceReadPathCharacterizationTest
             List<OrderSummaryDto> result = orderService.getMyOrders(order.getCustomerEntity().getId());
 
             assertEquals(1, result.size());
-            assertEquals(0, result.get(0).getItemCount());
+            assertEquals(0, result.getFirst().getItemCount());
         }
 
         @Test
         @DisplayName("empty orders — returns empty list")
-        @SuppressWarnings("unchecked")
         void emptyOrders_returnsEmptyList()
         {
             stubMyOrdersFind(Collections.emptyList());
